Table schedules.workout_schedule {
  id uuid [pk]
  user_id uuid [not null, ref: > identity.user.id]
  workout_split_id bigint [not null, ref: > workout.workout_split.id]
  day_of_week integer [not null, note: '0 (Sunday) through 6 (Saturday)']
  start_time time [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes { (user_id, workout_split_id, day_of_week) [unique] }
}

Table identity.user { id uuid [pk] }
Table workout.workout_split { id bigint [pk] }
